--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#eeeeee" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Floordoor is a close collective of musicians in New York City who have collaborated for years in various incarnations. Much of their work brings popular music into the avant-garde, infusing groove-centric music with noise, modern composition, and other explorations."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
